kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-thunderstorm-0-deployment
spec:
  #minReadySeconds: 3
  #revisionHistoryLimit: 5
  #progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: webapp-thunderstorm-0
  template:
    metadata:
      #annotations:
      #  prometheus.io/scrape: "true"
      #  prometheus.io/port: "9797"
      labels:
        app: webapp-thunderstorm-0
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: webapp-thunderstorm-0
        image: ghcr.io/joe8755/webapp-thunderstorm-0:v0.0.3
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        #- name: http-metrics
        #  containerPort: 9797
        #  protocol: TCP
        #- name: grpc
        #  containerPort: 9999
        #  protocol: TCP
        #command:
        #- ./podinfo
        #- --port=9898
        #- --port-metrics=9797
        #- --grpc-port=9999
        #- --grpc-service-name=podinfo
        #- --level=info
        #- --random-delay=false
        #- --random-error=false
        #env:
        #- name: PODINFO_UI_COLOR
        #  value: "#34577c"
        #livenessProbe:
        #  exec:
        #    command:
        #    - podcli
        #    - check
        #    - http
        #    - localhost:9898/healthz
        #  initialDelaySeconds: 5
        #  timeoutSeconds: 5
        #readinessProbe:
        #  exec:
        #    command:
        #    - podcli
        #    - check
        #    - http
        #    - localhost:9898/readyz
        #  initialDelaySeconds: 5
        #  timeoutSeconds: 5
        #resources:
        #  limits:
        #    cpu: 2000m
        #    memory: 512Mi
        #  requests:
        #    cpu: 100m
        #    memory: 64Mi
        #volumeMounts:
        #  - name: data
        #    mountPath: /data
      #volumes:
      #  - name: data
      #    emptyDir: {}
