kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-thunderstorm-0-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /webapp-thunderstorm-0(/|$)(.*)
        backend:
          service:
            name: webapp-thunderstorm-0-service
            port:
              number: 5000
